# python-dev-template

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
{{cookiecutter.project_name}}/.github/: docker-build.yml.disabled  poetry-build.yml.disabled
{{cookiecutter.project_name}}/.github/workflows/: docker-build.yml.disabled  main-build.yml.disabled  package-build.yml.disabled  poetry-build.yml.disabled
{{cookiecutter.project_name}}/docker/: Dockerfile
{{cookiecutter.project_name}}/notebooks/: example_notebook.ipynb
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/components/: example_component.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/scripts/: __init__.py  example_script.py
{{cookiecutter.project_name}}/tests/: __init__.py  test_{{cookiecutter.package_name}}.py
