[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
authors = [
  {name = "Firstname Lastname", email = "name@domain.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[project.optional-dependencies]
dev = [
    "mypy==^1.0.0",
    "tox==^4.4.7",
    "pytest-cov==^4.0.0",
    "pre-commit==^3.2.0",
    "jupyter==^1.0.0",
    "ruff==^0.0.262",
]

[tool.hatch.build.targets.sdist]
include = ["src/**", "tests/**", "README.md"]

[tool.hatch.build.targets.wheel]
include = ["src/**", "tests/**", "README.md"]

