[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0,<2.0.0",
    "tox>=4.4.7,<5.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pre-commit>=3.2.0,<4.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "ruff>=0.0.262,<1.0.0"
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/**", "tests/**", "README.md"]

[tool.hatch.build.targets.wheel]
include = ["src/**", "tests/**", "README.md"]

