[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2.0.0",
    "mypy>=1.0.0,<2.0.0",
    "pre-commit>=3.2.0,<4.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "ruff>=0.0.262,<1.0.0",
    "tox>=4.4.7,<5.0.0",
]

[project.optional-dependencies]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
# Enable common rule sets
select = [
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "I",      # isort (import order)
  "D",      # pydocstyle (docstrings)
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "PL",     # pylint rules
]

# Docstring style (Google/Numpy/etc.)
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["{{cookiecutter.project_name}}"]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/**", "tests/**", "README.md"]

[tool.hatch.build.targets.wheel]
include = ["src/**", "tests/**", "README.md"]
